--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     },
     "homepage": "https://github.com/matiastang/vue-scaffold#readme",
     "dependencies": {
+        "@orillusion/core": "^0.6.2",
         "child_process": "^1.0.2",
         "inquirer": "8.2.0",
         "ora": "5.4.0",
